force-app/main/default/objects/Asset/fields/CSS_properties__c.field-meta.xml
<CustomField>
    <fullName>CSS_properties__c</fullName>
    <label>CSS properties</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>