force-app/main/default/objects/Asset/fields/CSS_Properties_for_Damage__c.field-meta.xml
<CustomField>
    <fullName>CSS_Properties_for_Damage__c</fullName>
    <label>CSS Properties for Damage</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>