force-app/main/default/objects/Asset/fields/Daily_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Daily_Mileage__c</fullName>
    <formula>IF ( TODAY() - InstallDate &gt; 0, Mileage__c /( TODAY() - InstallDate ), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Daily Mileage</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>