force-app/main/default/objects/Asset/fields/Is_Damaged__c.field-meta.xml
<CustomField>
    <fullName>Is_Damaged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Damaged</label>
    <type>Checkbox</type>
</CustomField>