force-app/main/default/objects/Asset/fields/Mileage__c.field-meta.xml
<CustomField>
    <fullName>Mileage__c</fullName>
    <label>Mileage</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>