force-app/main/default/objects/Asset/fields/Remaining_Life__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Life__c</fullName>
    <formula>IF (  Life_Expectancy__c &gt; 0,  1 - Mileage__c / Life_Expectancy__c , IF(Product2.Life_Expectancy__c &gt; 0, 1 - Mileage__c / Product2.Life_Expectancy__c , 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Life</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>