force-app/main/default/objects/Asset/fields/Replacement_Date__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Date__c</fullName>
    <formula>IF( Daily_Mileage__c &gt; 0, TODAY() + (Life_Expectancy__c - Mileage__c) / Daily_Mileage__c, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Replacement Date</label>
    <type>Date</type>
</CustomField>