force-app/main/default/objects/Asset/fields/Walk_Around_Order__c.field-meta.xml
<CustomField>
    <fullName>Walk_Around_Order__c</fullName>
    <label>Walk Around Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>