force-app/main/default/objects/Asset/recordTypes/Auto_Vehicle.recordType-meta.xml
<RecordType>
    <fullName>Auto_Vehicle</fullName>
    <active>true</active>
    <label>Vehicle</label>
</RecordType>