force-app/main/default/objects/Asset/recordTypes/Auto_Vehicle_Part.recordType-meta.xml
<RecordType>
    <fullName>Auto_Vehicle_Part</fullName>
    <active>true</active>
    <label>Vehicle Part</label>
</RecordType>